--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		    // files is a FileList of File objects. List some properties.
 		    var output = [];
-		    document.getElementById("status").innerHTML = "Commit ready with:" _files;
+		    document.getElementById("status").innerHTML = "Commit ready with:"+_files;
 		  }
 
 		document.getElementById('files').addEventListener('change', handleFileSelect, false);
